[package]
name = "matrix_handler"
version = "0.1.1"
edition = "2024"
authors = ["Marcos Vinicius <viniciusrm.marcos@gmail.com"]
description = "Uma biblioteca leve e eficiente para manipulação, operações matemáticas e transformação de matrizes em Rust. Focada em performance e simplicidade de interface."
license = "MIT"
readme = "README.md"
keywords = ["matrix", "linear-algebra", "math"]
categories = ["mathematics", "data-structures"]

[dependencies]
